<resources>
    <string name="app_name">BookStore</string>
    <string name="insert_data">Insert Data</string>
    <string name="read_data">Read Data</string>
    <string name="welcome_message">Welcome to my Android Basics Nanodegree Book Store project. Feel free to press whatever button you like to see what happens.</string>
    <string name="data_inserted">Data inserted!</string>
    <string name="demo_product_name">New product</string>
    <string name="demo_supplier_name">Hudson</string>
    <string name="demo_supplier_phone">+5514996097794</string>
    <string name="sale_button_text">Sale</string>
    <string name="example_price">R$10,00</string>
    <string name="example_quantity">5 Units left</string>
    <string name="example_book_title">Book Title</string>
    <string name="no_books_available">No books available.</string>
    <string name="edit_book">Edit Book</string>
    <string name="add_book">Add Book</string>
    <string name="book_title_hint">Book Title</string>
    <string name="book_quantity_hint">Quantity</string>
    <string name="book_price_hint">Price</string>
    <string name="supplier_name_hint">Supplier Name</string>
    <string name="supplier_phone_hint">Supplier Phone</string>
    <string name="save">Save</string>
    <string name="books_updated_successfully">Book updated successfully</string>
    <string name="book_inserted_successfully">Book inserted successfully</string>
    <string name="delete">Delete</string>
    <string name="book_deleted_successfully">Book deleted successfully</string>
    <string name="delete_all_books">Delete all books</string>
    <string name="sold">Sold</string>
    <string name="units_left">%d units left</string>
    <string name="no_units_left">No units left</string>
    <string name="invalid_product_name">Book title cannot be empty</string>
    <string name="invalid_price">Price is invalid</string>
    <string name="invalid_quantity">Quantity is invalid</string>
    <string name="invalid_supplier_name">Invalid supplier name</string>
    <string name="invalid_supplier_phone">Invalid supplier phone</string>
    <string name="call_the_supplier">Call the supplier</string>
    <string name="confirm_delete">Are you sure you want to delete this item?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
