<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    xmlns:tools="http://schemas.android.com/tools">
    <TextView
        android:id="@+id/book_title"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        tools:text="@string/example_book_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/book_quantity"
        android:layout_below="@id/book_title"
        android:layout_marginTop="@dimen/quantity_margin"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
        tools:text="@string/example_quantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        tools:text="@string/example_price"
        android:id="@+id/price"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/sale_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/price"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="16dp"
        android:focusable="false"
        android:text="@string/sale_button_text" />
</RelativeLayout>